# Witchcraft

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CodingStandard.md  README-lua.md  README.md  appconfig.json  installDependencies-linux.sh  installDependencies-win32.bat  src.7z  src_1.wca  src_compressed.wca  src_compressed2.wca  src_compressed3.wca  src_uncompressed.wca  styleguide.md  vcpkg.json
data/InstallDataTest/scripts/: kill.lua  test.lua
dependencies/: CMakeLists.txt  Tinyfile.txt
dependencies/LuaJIT-2.1.0-beta3/src/: buildvm.exp  buildvm.lib  lua51.exp  lua51.lib  luajit.exp  minilua.exp  minilua.lib
dependencies/blake3/: CMakeLists.txt
dependencies/f2h/apps/linux/: FileToHeader
dependencies/fmt/lib/windows-x64-debug/: fmt.lib
dependencies/fmt/lib/windows-x64-release/: fmt.lib
dependencies/lua/apps/linux/: lua  luac
dependencies/lua/lib/windows-x64-debug/: lua_shared.lib  lua_static.lib
dependencies/lua/lib/windows-x64-release/: lua_static.lib
dependencies/sdl/lib/windows-x64-debug/: SDL2_test.lib  SDL2d.lib  SDL2maind.lib
dependencies/sdl/lib/windows-x64-release/: SDL2_test.lib  SDL2main.lib
licenses/: sdl2.txt
src/: .clang-format  CMakeLists.txt  appconfig.cpp  appconfig.h  appconfig.ixx  config.cpp  config.h  console.cpp  console.h  debug.cpp  debug.h  events.h  main.cpp  main.h  test.cpp  userconfig.cpp  userconfig.h  window.h  window_sdlvk.cpp  window_win32.cpp
src/dbg/: CMakeLists.txt  cli.cpp  cli.h  debug.cpp  debug.h  exceptions.h  unittest.h
src/ecs/: CMakeLists.txt  archetype.cpp  archetype_table.h  component.h  ecs.h  entity.cpp  entity.h  entity_lua.cpp  idtypes.h
src/ecs/components/: NameComponent.h
src/ecs_old/: archetype.h  registry.h
src/etc/: CMakeLists.txt  anysoa.h  anyvector.h  result.h  soa.h  soa_utest.cpp  source.h  table.h  table_utest.cpp
src/filesys/: CMakeLists.txt  archive.cpp  archive.h  file.h  filedata.cpp  filedata.h  module.cpp  module.h  package.cpp  package.h  paths.cpp  paths.h  vfs.cpp  vfs.h
src/gfx/: CMakeLists.txt  renderer_vk.cpp  renderer_vk.h
src/graphics/: renderer.h  renderer_sdlvk.cpp  renderer_vk.cpp
src/graphics/shaders/: tut.vert.glsl
src/lua/: CMakeLists.txt  luasystem.cpp  luasystem.h
src/lua/corescripts/: events.lua  sandbox.lua  sandbox.lua.h
src/lua/scripts/: math2.lua  sandbox.lua
src/lua/scripts/built/: events.lua  events.lua.h  math2.lua  math2.lua.h  sandbox.lua  sandbox.lua.h
src/lua/scripts_bin/: events.luac  events.luac.h  math2.luac  math2.luac.h  sandbox.luac
src/lua/scripts_inc/: events.lua.h  events.lua.h.h  math2.lua.h  math2.lua.h.h  sandbox.lua.h  sandbox.lua.h.h
src/sys/: CMakeLists.txt  appconfig.h  cli.cpp  cli.h  cli_linux.cpp  cli_win32.cpp  debug.cpp  debug.h  main.cpp  mainloop.cpp  mainloop.h  paths.cpp  paths.h  renderer.h  renderer_d3d12.cpp  settings.cpp  settings.h  window.h  window_sdl.cpp  window_sdlvk.cpp  window_win32.cpp
src/tools/: CMakeLists.txt  base64.cpp  base64.h  base64_test.cpp  crossplatform.h  dxmathhelper.h  enumbits.h  exceptions.h  fixedstring.h  hashtable.hpp  hashtable_test.cpp  htable.hpp  htable_test.cpp  jsonhelper.hpp  result.h  result.hpp  rng.cpp  rng.h  sha1.hpp  sha1_test.cpp  soa.hpp  soa_test.cpp  stringhelper.h  strtoken.h  structofarrays.hpp  structofarrays_test.cpp  utf.h  uuid.cpp  uuid.h  uuid_test.cpp
src_1/: appconfig.cpp  appconfig.h  debug.cpp  debug.h  events.h  main.cpp  main.h  userconfig.cpp  userconfig.h  window_win32.cpp
src_1/ecs/: entity.cpp
src_1/ecs/systems/: system.h
src_1/filesys/: archive.cpp  archive.h  filedata.cpp  filedata.h  package.cpp  vfs.cpp  vfs.h
src_1/graphics/: renderer_vk.cpp
src_1/graphics/shaders/: tut.frag.glsl
src_1/lua/scripts/: sandbox.lua
src_1/tools/: dxmathhelper.h  fixedstring.h  htable_test.cpp  jsonhelper.cpp  rng.h  soa - backup.hpp  soa.hpp  soa_test.cpp  stringhelper.h  tests.cpp
